2.4.3
 - Yet more workarounds for bugs in Visual C++ .NET 2003
 - Fixes for SunC++ 5.5
 - On Visual C++, now defines NOMINMAX, fixing large object support
 - Workaround for BSD grep
 - Improvements for builds from CVS
2.4.2
 - Fix minor problems with Apple's version of g++ 3.3
 - Fix problem with MingW on Windows
 - Workarounds and fixes for Visual C++.NET 2003
 - Renewed compatibility with g++ 2.95
 - More sample configuration headers
 - Updated reference documentation
 - Removed assert code
2.4.1
 - Several bugs in icursor_iterator fixed; incompatible interface changes
 - Tightens throw specifications on begin(), end(), size(), capacity()
 - Containers define reference and pointer types
 - Implements swap() in all container types
 - Implements == and != in all container types
 - Stabilizes new (but still limited) cursor interface
 - icursor_iterator thinks purely in stride granularity
 - Introduces </<=/>/>= comparisons for icursor_iterators
 - Allows "adopted SQL cursors" in new cursor interface
 - Reference-counting in binarystrings, so they can be copied (and efficiently)
 - Fixes reference-to-temporary problem with std::reverse_iterator in results
 - Result/tuple reverse_iterators no longer require std::reverse_iterator
 - Includes some sample config headers (in config/sample-headers)
 - Replaces iffy autoconf checks (avoid failures with maintainer mode's -Werror)
 - Fixes incompatibility with some implementations of Unix "cut" program (again)
2.4.0
 - Fixes incompatibility with some implementations of Unix "cut" program
 - Fixes "ptrdiff_t redefinition" problem in some environments
 - More container-like tuples, so fields can be iterated
 - All size_type types are now unsigned
 - More conservative robusttransaction--thanks Tom Lane
 - Stream-like extraction operator for result field conversion
 - Warnings about deprecated headers now suppressed while compiling library
 - Iterator constructors and copy assignments now have empty throw specs
2.3.0