@@ -1,0 +1,12 @@
+#define PGSTD std
+/* #undef PQXX_BROKEN_ITERATOR */
+/* #undef PQXX_BROKEN_USING_DECL */
+#define PQXX_HAVE_CHAR_TRAITS 1
+#define PQXX_HAVE_CPP_PRAGMA_MESSAGE 1
+/* #undef PQXX_HAVE_CPP_WARNING */
+#define PQXX_HAVE_IOS 1
+#define PQXX_HAVE_LIMITS 1
+#define PQXX_HAVE_LONG_DOUBLE 1
+/* #undef PQXX_HAVE_REVERSE_ITERATOR */
+#define PQXX_HAVE_STREAMBUF 1
+
